{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 22,
  "lineage": "d3954569-4594-1646-86dd-10dbb83866e2",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].poc",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:331182133186:security-group/sg-0f2ef9330e3176a34",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2ef9330e3176a34",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "331182133186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Company": "Amazon Web Services",
              "Create-Time": "2022-06-21T15:07:51Z",
              "Customer": "empoly-number",
              "Description": "Terraform Test Application IaC",
              "Name": "allow_tls",
              "Project": "Solution Name",
              "TerraformManaged": "true"
            },
            "tags_all": {
              "Company": "Amazon Web Services",
              "Create-Time": "2022-06-21T15:07:51Z",
              "Customer": "empoly-number",
              "Description": "Terraform Test Application IaC",
              "Name": "allow_tls",
              "Project": "Solution Name",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-036d8931f03a80b20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.terraform_module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].poc",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.10.0/24",
              "125.5.5.2/32"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2745659902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2ef9330e3176a34",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.allow_tls",
            "module.vpc.aws_vpc.terraform_module_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.20.0/24"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-332280376",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2ef9330e3176a34",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.allow_tls",
            "module.vpc.aws_vpc.terraform_module_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.30.0/24"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-455535526",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2ef9330e3176a34",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.allow_tls",
            "module.vpc.aws_vpc.terraform_module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].poc",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:331182133186:subnet/subnet-04e248099441f69fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e248099441f69fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331182133186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Company": "Amazon Web Services",
              "Create-Time": "2022-06-21T15:03:36Z",
              "Customer": "empoly-number",
              "Description": "Terraform Test Application IaC",
              "Name": "privete_subnet_0",
              "Project": "Solution Name",
              "TerraformManaged": "true"
            },
            "tags_all": {
              "Company": "Amazon Web Services",
              "Create-Time": "2022-06-21T15:03:36Z",
              "Customer": "empoly-number",
              "Description": "Terraform Test Application IaC",
              "Name": "privete_subnet_0",
              "Project": "Solution Name",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-036d8931f03a80b20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_module_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:331182133186:subnet/subnet-0e87badf2071cd1af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e87badf2071cd1af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331182133186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Company": "Amazon Web Services",
              "Create-Time": "2022-06-21T15:03:36Z",
              "Customer": "empoly-number",
              "Description": "Terraform Test Application IaC",
              "Name": "privete_subnet_1",
              "Project": "Solution Name",
              "TerraformManaged": "true"
            },
            "tags_all": {
              "Company": "Amazon Web Services",
              "Create-Time": "2022-06-21T15:03:36Z",
              "Customer": "empoly-number",
              "Description": "Terraform Test Application IaC",
              "Name": "privete_subnet_1",
              "Project": "Solution Name",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-036d8931f03a80b20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_module_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].poc",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:331182133186:vpc/vpc-036d8931f03a80b20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7c3b3228853e5fd",
            "default_route_table_id": "rtb-0c75071112f21565b",
            "default_security_group_id": "sg-00068188b72ea7e3b",
            "dhcp_options_id": "dopt-0237f4513a5a7b02f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-036d8931f03a80b20",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c75071112f21565b",
            "owner_id": "331182133186",
            "tags": {
              "Company": "Amazon Web Services",
              "Create-Time": "2022-06-21T15:07:51Z",
              "Customer": "empoly-number",
              "Description": "Terraform Test Application IaC",
              "Name": "terraform_module_vpc",
              "Project": "Solution Name",
              "TerraformManaged": "true"
            },
            "tags_all": {
              "Company": "Amazon Web Services",
              "Create-Time": "2022-06-21T15:07:51Z",
              "Customer": "empoly-number",
              "Description": "Terraform Test Application IaC",
              "Name": "terraform_module_vpc",
              "Project": "Solution Name",
              "TerraformManaged": "true"
            }
          }
        }
      ]
    }
  ]
}